# amerge-docs-bot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/amergebot/api/: app.py  client.py
src/amergebot/api/routers/: chat.py  database.py  retrieve.py
src/amergebot/apps/: utils.py
src/amergebot/apps/discord/: __main__.py
src/amergebot/apps/slack/: __main__.py  config.py
src/amergebot/chat/: chat.py  rag.py  schemas.py
src/amergebot/database/: client.py  database.py
src/amergebot/evaluation/eval/: async_main.py  correctness.py  factfulness.py  relevancy.py
src/amergebot/evaluation/weave_eval/: log_data.py  main.py  weave_correctness.py
src/amergebot/ingestion/: __main__.py  config.py  prepare_data.py  preprocess_data.py  utils.py  vectorstores.py
src/amergebot/ingestion/preprocessors/: markdown.py  source_code.py
src/amergebot/rag/: query_handler.py  response_synthesis.py  retrieval.py  utils.py
src/amergebot/retriever/: base.py  web_search.py
src/wandbot/apps/slack/: __main__.py
